--- a/SimpleApplication/package.json
+++ b/SimpleApplication/package.json
@@ -15,7 +15,10 @@
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.1",
     "uuid": "^3.2.1"
   }
