--- a/hear-my-song/hear-my-song-ear/pom.xml
+++ b/hear-my-song/hear-my-song-ear/pom.xml
@@ -20,19 +20,11 @@
 				<configuration>
 					<version>7</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
-					<archive>
-						<manifest>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-						</manifest>
-					</archive>
-					<modules>
-						<webModule>
-							<groupId>de.fh-dortmund.kosys</groupId>
-							<artifactId>hear-my-song-web</artifactId>
-							<contextRoot>hear-my-song</contextRoot>
-						</webModule>
-					</modules>
+					<!-- <archive> <manifest> <addDefaultImplementationEntries>true</addDefaultImplementationEntries> 
+						<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries> </manifest> 
+						</archive> <modules> <webModule> <groupId>de.fh-dortmund.kosys</groupId> 
+						<artifactId>hear-my-song-web</artifactId> <contextRoot>hear-my-song</contextRoot> 
+						</webModule> </modules> -->
 				</configuration>
 			</plugin>
 		</plugins>
