--- a/hear-my-song/hear-my-song-web/pom.xml
+++ b/hear-my-song/hear-my-song-web/pom.xml
@@ -27,6 +27,20 @@
 			<artifactId>javaee-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!-- REST Dependencies -->
+		<!-- <dependency> <groupId>javax.ws.rs</groupId> <artifactId>javax.ws.rs-api</artifactId> 
+			<version>2.1</version> <scope>provided</scope> </dependency> <dependency> 
+			<groupId>org.glassfish.jersey.containers</groupId>
+		<artifactId>jersey-container-servlet</artifactId>
+		<version>2.27</version>
+	</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.27</version>
+		</dependency>
+		-->
+
 	</dependencies>
 	<build>
 		<plugins>
