--- a/hear-my-song/hear-my-song-util/pom.xml
+++ b/hear-my-song/hear-my-song-util/pom.xml
@@ -32,16 +32,19 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
+		<!-- <dependency> <groupId>javax</groupId> <artifactId>javaee-api</artifactId> 
+			<scope>provided</scope> </dependency> <dependency> <groupId>org.hibernate.javax.persistence</groupId> 
+			<artifactId>hibernate-jpa-2.1-api</artifactId> <version>1.0.0.Final</version> 
+			<scope>provided</scope> </dependency> <dependency> <groupId>org.hibernate</groupId> 
+			<artifactId>hibernate-core</artifactId> <version>5.2.2.Final</version> <scope>provided</scope> 
+			</dependency> <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
+			<version>8.0.11</version> <scope>provided</scope> </dependency> -->
 		<!-- Test scope dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
