--- a/hear-my-song/hear-my-song-ejb/pom.xml
+++ b/hear-my-song/hear-my-song-ejb/pom.xml
@@ -52,5 +52,11 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Spotify API -->
+		<dependency>
+			<groupId>se.michaelthelin.spotify</groupId>
+			<artifactId>spotify-web-api-java</artifactId>
+			<version>2.0.3</version>
+		</dependency>
 	</dependencies>
 </project>
