--- a/SimpleApplication/package.json
+++ b/SimpleApplication/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.3.1",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "querystring": "~0.2.0",
     "react": "^16.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.2.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.1"
   }
