--- a/SimpleApplication/package.json
+++ b/SimpleApplication/package.json
@@ -28,12 +28,13 @@
     "react-modal": "^3.5.1",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.1",
+    "react-scripts": "^1.1.4",
     "react-search-bar": "^2.2.0",
     "reactstrap": "^6.3.1",
     "simplebar-react": "0.0.1",
     "socket.io-client": "^2.1.1",
     "spotify-web-api-js": "^0.24.0",
-    "yarn": "^1.7.0"
+    "yarn": "^1.7.0",
+    "proxy": "http://localhost:8888/"
   }
 }
