--- a/SimpleApplication/package.json
+++ b/SimpleApplication/package.json
@@ -15,6 +15,7 @@
     "ajv": "^6.5.2",
     "create-react-class": "^15.6.3",
     "jquery": "^3.3.1",
+    "npm": "^6.2.0",
     "prop-types": "^15.6.2",
     "querystring": "~0.2.0",
     "react": "^16.4.1",
