--- a/hear-my-song/hear-my-song-web/pom.xml
+++ b/hear-my-song/hear-my-song-web/pom.xml
@@ -30,16 +30,17 @@
 		<!-- REST Dependencies -->
 		<!-- <dependency> <groupId>javax.ws.rs</groupId> <artifactId>javax.ws.rs-api</artifactId> 
 			<version>2.1</version> <scope>provided</scope> </dependency> <dependency> 
-			<groupId>org.glassfish.jersey.containers</groupId>
-		<artifactId>jersey-container-servlet</artifactId>
-		<version>2.27</version>
-	</dependency>
+			<groupId>org.glassfish.jersey.containers</groupId> <artifactId>jersey-container-servlet</artifactId> 
+			<version>2.27</version> </dependency> <dependency> <groupId>org.glassfish.jersey.core</groupId> 
+			<artifactId>jersey-client</artifactId> <version>2.27</version> </dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
 		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>2.27</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.6</version>
 		</dependency>
-		-->
+
 
 	</dependencies>
 	<build>
