--- a/hear-my-song/hear-my-song-ejb/pom.xml
+++ b/hear-my-song/hear-my-song-ejb/pom.xml
@@ -58,5 +58,10 @@
 			<artifactId>spotify-web-api-java</artifactId>
 			<version>2.0.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
 	</dependencies>
 </project>
