--- a/hear-my-song/pom.xml
+++ b/hear-my-song/pom.xml
@@ -84,6 +84,13 @@
 				<type>jar</type>
 				<scope>test</scope>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>26.0-jre</version>
+				<scope>compile</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<properties>
